# pyLanguagetool

./: .gitignore  .gitlab-ci.yml  .pre-commit-hooks.yaml  .travis.yml  CHANGELOG.rst  Jenkinsfile  LICENSE  README.rst  appveyor.yml  cli.py  languagetool.py  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  spelling.txt
completions/: pylanguagetool.bash  pylanguagetool.fish  pylanguagetool.zsh
docs/: api_docs.rst  conf.py  index.rst
docs/_templates/: base.html  layout.html
pylanguagetool/: CustomConfigFileParser.py  __init__.py  api.py  cli.py  converters.py
tests/: test_api.py  test_cli.py  test_converters.py
