[tool.poetry]
name = "pylanguagetool"
version = "0.9.0"
description = "A python library and CLI for the LanguageTool JSON API"
authors = ["Lukas Winkler <git@lw1.at>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6,<3.11"
colorama = ">=0.4.1"
configargparse = ">=0.14.0"
requests = ">=2.22.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
docutils = "^0.17.1"
markdown2 = "^2.3.8"
beautifulsoup4 = "^4.8.2"
sphinx = "^4.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
