[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pyLanguagetool"
version = "0.11.0"
authors = [
    { name = "Lukas Winkler", email = "python@lw1.at" }
]
license = { text = "MIT" }
description = "A python library and CLI for the LanguageTool JSON API"
keywords = ["languagetool", "spell", "grammar", "checker"]
readme = "README.rst"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "colorama>=0.4.1",
    "configargparse>=0.14.0",
    "requests>=2.22.0",
]

[project.urls]
Documentation = "https://pylanguagetool.lw1.at/"
Source = "https://github.com/Findus23/pyLanguagetool/"
Issues = "https://github.com/Findus23/pyLanguagetool/issues"

[project.optional-dependencies]
dev = ["pytest", "sphinx", "furo"]
optional = ["beautifulsoup4", "markdown2", "docutils"]

[project.scripts]
pylanguagetool = "pylanguagetool.cli:main"

[tool.setuptools]
py-modules = ["pylanguagetool"]
