[metadata]

[options]
setup_requires =
    sphinx;python_version>"3.4"
    sphinx<2;python_version<="3.4"

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1

[build_sphinx]
source-dir = docs
build-dir = docs/_build
